--- a/frontend/view/layouts/index.pug
+++ b/frontend/view/layouts/index.pug
@@ -11,8 +11,12 @@ html(lang="zh-CN")
     meta(content='yes', name='apple-mobile-web-app-capable')
     meta(content='black', name='apple-mobil　e-web-app-status-bar-style')
     link(rel="stylesheet", href="/css/base.css")
-    block styles
-    block scripts
+    link(rel="stylesheet", href="/css/common.css")
+    block style
+    script(src="/lib/jquery.min.js" charset="utf-8")
+    script(src="/js/common.js")
+    block script
     title 千立生物_打造洁净无菌空间 - #{ title }
   body
-    block contents
+    block content
+    block footer
