--- a/services/frontend/src/style/index.styl
+++ b/services/frontend/src/style/index.styl
@@ -304,6 +304,7 @@
   &.prev
     left -100px
 
+// 产品
 #product-center
   position relative
   width 100%
@@ -365,7 +366,6 @@
     font-size 24px
     color #010510
     content '/'
-
 
 .product-center-navigation
   position absolute
@@ -511,6 +511,7 @@
       height 96%
       object-fit contain
 
+// 导航
 #navigation-container
   position relative
   display flex
@@ -527,6 +528,17 @@
     background-image url(/upload/20220614174050176946.png)
     background-repeat no-repeat
     background-size cover
+
+    &__bg
+      position absolute
+      inset 0
+      z-index 0
+      background-image url(/image/indAbR_top01.png)
+      background-repeat no-repeat
+      background-position right center
+      background-size 50%
+      opacity .2
+
   &-bottom
     display flex
 
@@ -554,8 +566,8 @@
   color #fff
 
 .navigation-about-desc
-  font-size: 16px;
-  color: rgba(255,255,255,60%);
+  font-size 16px
+  color rgba(255,255,255,60%)
 
 .navigation-inner-job
 .navigation-inner-news
@@ -604,3 +616,150 @@
 .navigation-item-desc
   font-size 16px
   color rgba(255,255,255,60%)
+
+// 新闻中心
+#news-container
+  position relative
+  padding 98px 0
+  overflow hidden
+  background #fff
+
+.news-bg
+  position absolute
+  top -5%
+  right 0
+  font-size 406px
+  font-style normal
+  font-weight 600
+  line-height 0.8
+  color rgba(233, 235, 237, 0.36)
+  text-transform uppercase
+  user-select none
+  writing-mode tb-rl
+
+.news-head
+  display flex
+  align-items center
+  padding-bottom 40px
+  margin 0 5%
+
+  &__title
+    > p.en
+      position relative
+      margin-bottom 20px
+      font-size 55px
+      font-weight 600
+      line-height 1
+      color #010510
+      text-transform uppercase
+    > p.cn
+      display block
+      font-size 38px
+      font-weight 600
+      line-height 1
+      color #010510
+
+.news-inner
+  display flex
+  padding-left 5%
+
+.news-thumb
+  position relative
+  width 36%
+
+.news-thumb-slide
+  position relative
+  padding-top 120%
+  > img
+    position absolute
+    top 0
+    left 0
+    width 100%
+    height 100%
+    object-fit cover
+
+.news-list
+  position relative
+  display flex
+  flex-direction column
+
+.news-item
+  position relative
+  display flex
+  flex 1
+  flex-direction row
+  align-items center
+  justify-content space-between
+  width 100%
+  padding 0 14% 0 8%
+  background-repeat no-repeat
+  background-size cover
+
+  .news-item-icon__light
+    display none
+
+  &:after
+    position absolute
+    right 8%
+    bottom 0
+    left 8%
+    height 1px
+    content ''
+    border-bottom 1px solid rgba(0,0,0,10%)
+
+  &.active
+    flex 1.6
+    flex-direction column
+    align-items flex-start
+    justify-content center
+    background-image url('/upload/20220614174050176946.png')
+
+    .news-item-icon__light
+      display block
+    .news-item-icon__dark
+      display none
+
+    .news-item-text
+      padding-bottom 40px
+      font-size 24px
+      color #fff
+      &:after
+        display block
+
+    .news-item-time
+      color #fff
+
+.news-item-content
+  display flex
+  flex-wrap wrap
+  align-content center
+
+.news-item-icon
+  position relative
+
+.news-item-time
+  display block
+  width 100%
+  margin-bottom 15px
+  font-size 16px
+  color rgba(102, 102, 102, 0.8)
+
+.news-item-text
+  position relative
+  font-size 20px
+  font-weight bold
+  color #080000
+
+  &:after
+    position absolute
+    bottom 0
+    left 0
+    display none
+    width 100%
+    height 1px
+    content ''
+    border-top 1px solid rgba(255,255,255,40%)
+
+.news-item-icon
+  position relative
+  width 30px
