ci: 调整打包配置

--- a/services/frontend/src/view/index.pug
+++ b/services/frontend/src/view/index.pug
@@ -184,7 +184,7 @@ block content
 
       .news-list.flex1
         each item,index in news
-          a.news-item(href='javascript:;' class=`${(index === 0 && 'active') || ''}`)
+          a.news-item(href='javascript:;' qianli-animate='animate-fade-in' class=`${(index === 0 && 'active') || ''}`)
             .news-item-content
               time.news-item-time #{item.date}
               p.news-item-text #{item.title}
