--- a/services/frontend/src/style/layout.styl
+++ b/services/frontend/src/style/layout.styl
@@ -4,6 +4,19 @@
   left 0
   z-index 999
   width 100%
+  background-color #fff
+  box-shadow 0 0px 2px 0 rgba(0,0,0,18%)
+  transition all 480ms
+
+  .qianli-header-nav-item
+      @apply text-gray-700
+
+.qianli-header-ghost
+  position fixed
+  top 0
+  left 0
+  z-index 999
+  width 100%
   transition all 480ms
 
   &:hover
