--- a/services/frontend/src/view/components/index.pug
+++ b/services/frontend/src/view/components/index.pug
@@ -1,4 +1,5 @@
 include ./qianli-ghost-button.pug
+include ./qianli-badge-title.pug
 
 mixin swiper(pagination = true)
   .swiper-container&attributes(attributes)
