--- a/services/frontend/src/view/components/index.pug
+++ b/services/frontend/src/view/components/index.pug
@@ -1,5 +1,7 @@
 include ./qianli-ghost-button.pug
 include ./qianli-badge-title.pug
+include ./qianli-button-group.pug
+include ./qianli-button.pug
 
 mixin swiper(pagination = true)
   .swiper-container&attributes(attributes)
