--- a/services/frontend/src/style/common.styl
+++ b/services/frontend/src/style/common.styl
@@ -1,69 +1,5 @@
 @import 'animate'
+@import './components'
 
 .flex1
   flex 1
-
-.qianli-ghost-button
-  display inline-flex
-  column-gap 28px
-  justify-content space-between
-  // width 148px
-  padding 8px 20px
-  font-size 14px
-  border-style solid
-  border-width 1px
-  transition all .48s
-
-  &__icon
-    position relative
-    width 18px
-    height 18px
-    padding 2px
-    border-radius 50%
-
-  &[mode="light"]
-    color #fff
-    border-color #fff
-
-    .qianli-ghost-button__icon
-      background #01040A
-
-  &[mode="dark"]
-    color #01040A
-    border-color #01040A
-
-    .qianli-ghost-button__icon
-      background #fff
-
-  &:hover
-    color #fff
-    background-color #40327d
-    border-color #40327d
-
-.qianli-badge-title
-  position relative
-  margin-bottom 40px
-  font-size 38px
-  line-height 1.2
-  color #010510
-
-  &[center]
-    text-align center
-  &[right]
-    text-align right
-
-  &__en
-    position relative
-
-    b:last-of-type
-      position relative
-
-      &:after
-        position absolute
-        right 0
-        bottom 0
-        width 100%
-        height 17px
-        content ''
-        background linear-gradient(88deg, #5949A0, #8973EA)
-        opacity 0.2
