--- a/services/frontend/src/style/components/qianli-badge-title.styl
+++ b/services/frontend/src/style/components/qianli-badge-title.styl
@@ -9,9 +9,14 @@
     text-align center
   &[right]
     text-align right
+  &[large]
+    .qianli-badge-title__en
+      margin-bottom 20px
+      font-size 55px
 
   &__en
     position relative
+    margin-bottom 10px
 
     b:last-of-type
       position relative
