--- a/services/frontend/src/style/components/qianli-button.styl
+++ b/services/frontend/src/style/components/qianli-button.styl
@@ -8,6 +8,12 @@
 
   &[round]
     border-radius 100px
+  &[small]
+    min-width 90px
+    padding 4px 10px
+    font-size 14px
+    color #766cab
+    box-shadow 0 15px 30px -10px rgba(97,97,97,15%)
 
   &.active
   &:hover
